@@ -2,6 +2,8 @@
 
 * Upgraded to OpenLayers 2.8 RC5
 * Added labels and tooltips to airports (2515935)
+* Implemented clustering strategy
+* Replaced NavToolbar control with Navigation control
 * Bugfix: Ghosted airports show up funny in IE (2529004)
 
 <b>2009-10-14</b>
